objects/SDOC__SDoc__c.object
<CustomObject   >
    <description>S-Doc: Document records that are generated via S-Doc</description>
    <fields>
        <fullName>SDOC__Allow_Edit__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Allows the user to make edits to the document using their browser after it is generated.</description>
        <inlineHelpText>Allows the user to make edits to the document using their browser after it is generated.</inlineHelpText>
        <label>Allow Edit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SDOC__Attachment_ID__c</fullName>
        <label>Attachment ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDOC__Attachment_Name__c</fullName>
        <label>Attachment Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDOC__Comment__c</fullName>
        <label>Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SDOC__Data__c</fullName>
        <label>Data</label>
        <length>131000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SDOC__Document_Name__c</fullName>
        <formula>SDOC__SDTemplate__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Document Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDOC__Document_Number__c</fullName>
        <description>Use this field when you don&apos;t want a hyperlink to this record</description>
        <formula>Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Document Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDOC__Document_Type__c</fullName>
        <formula>TEXT(SDOC__SDTemplate__r.SDOC__Document_Category__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Document Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDOC__Edit_Link__c</fullName>
        <formula>IF( SDOC__SDTemplate__r.SDOC__Allow_Edit__c,
HYPERLINK( &apos;/apex/SDOC__SDEdit?sdid=&apos;+Id,IMAGE(&quot;/img/icon/custom51_100/pencil16.png&quot;,&quot;Edit&quot;)
,&quot;_blank&quot;),&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Edit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDOC__Email_Link__c</fullName>
        <formula>If( AND (NOT(isblank(SDOC__GD_Link__c)),ISPICKVAL(SDOC__GD_Status__c, &apos;Linked to Google Doc&apos;) )
,
    HYPERLINK( SDOC__GD_Link__c,IMAGE(&quot;/img/google/gmail_M_icon.gif&quot;,&quot;View&quot;),&quot;_blank&quot;)
,
     IF(       AND(     SDOC__SDTemplate__r.SDOC__Email_Lock_SendTo__c  , 
                          isblank(SDOC__SDTemplate__r.SDOC__Email_SendTo__c) 
                     ) , IMAGE(&quot;/img/func_icons/util/lock12.gif&quot;,&quot;Restricted&quot;),

        IF  (isblank(SDOC__ObjectType__c),&apos;&apos;,
         /*LINK*/
         HYPERLINK(
                              IF(AND (NOT(isblank(SDOC__GD_Link__c)),ISPICKVAL(SDOC__GD_Status__c, &apos;Linked to Attachment&apos;) ) ,
                               &quot;/apex/SDOC__SDEmail?SDId=&quot; &amp; Id,
                                &quot;/apex/SDOC__SDEmail?SDId=&quot; &amp; Id
                                 )
                            ,IMAGE( &apos;/img/func_icons/util/mailCloseEnv16.gif&apos;,&apos;Email&apos;)
                            , &quot;_self&quot;
                            )/*HYPERLINK*/
        )
     )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDOC__GD_Link__c</fullName>
        <label>Doc Link</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDOC__GD_Status__c</fullName>
        <description>Google Docs - Status linking S-Doc to Google Docs</description>
        <label>Doc Link Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Linked</fullName>
                    <default>true</default>
                    <label>Not Linked</label>
                </value>
                <value>
                    <fullName>Linked to Google Doc</fullName>
                </value>
                <value>
                    <fullName>Link to Attachment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SDOC__GD_Upload_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Doc Link Uploaded By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>S_Docs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SDOC__ISOCodeConversionRate__c</fullName>
        <label>ISOCodeConversionRate</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SDOC__ISOCodeCorporate__c</fullName>
        <label>ISOCodeCorporate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDOC__ISOCodeObj__c</fullName>
        <label>ISOCodeObj</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDOC__LineItemData2XML__c</fullName>
        <label>LineItemData2XML</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SDOC__LineItemDataXML__c</fullName>
        <label>LineItemDataXML</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SDOC__ObjectID15__c</fullName>
        <externalId>true</externalId>
        <label>ObjectID15</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDOC__ObjectID18__c</fullName>
        <externalId>true</externalId>
        <label>ObjectID18</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDOC__ObjectID__c</fullName>
        <label>Object ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDOC__ObjectType__c</fullName>
        <label>Object Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDOC__RecordData2XML__c</fullName>
        <label>RecordData2XML</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SDOC__RecordDataXML__c</fullName>
        <label>RecordDataXML</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SDOC__RelationshipCount__c</fullName>
        <label>RelationshipCount</label>
        <summaryForeignKey>SDOC__SDRelationship__c.SDOC__SDoc__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SDOC__S3_ETag__c</fullName>
        <externalId>true</externalId>
        <label>S3 ETag</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDOC__SDTemplate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Template</label>
        <referenceTo>SDOC__SDTemplate__c</referenceTo>
        <relationshipLabel>S-Docs</relationshipLabel>
        <relationshipName>SDocs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SDOC__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Generated</fullName>
                    <default>true</default>
                    <label>Generated</label>
                </value>
                <value>
                    <fullName>Mailed</fullName>
                </value>
                <value>
                    <fullName>Emailed</fullName>
                </value>
                <value>
                    <fullName>Pending Client Approval</fullName>
                </value>
                <value>
                    <fullName>Rejected By Client</fullName>
                </value>
                <value>
                    <fullName>Signed Pending Processing</fullName>
                </value>
                <value>
                    <fullName>Signed Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SDOC__Task_Due_Date__c</fullName>
        <label>Task Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SDOC__Task_Status__c</fullName>
        <label>Task Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDOC__Task_Subject__c</fullName>
        <label>Task Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDOC__Upload__c</fullName>
        <formula>HYPERLINK( &apos;/apex/SDOC__SDFileReplace?sdid=&apos;+Id +&apos;&amp;oid=&apos; + SDOC__ObjectID15__c
,IMAGE(&quot;/img/content/contribute16.png&quot;,&quot;Upload&quot;)
,&quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Upload New</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDOC__Version__c</fullName>
        <label>Version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDOC__View_Link__c</fullName>
        <formula>If(
AND (NOT(isblank(SDOC__GD_Link__c)),OR(ISPICKVAL(SDOC__GD_Status__c, &apos;Linked to Google Doc&apos;),ISPICKVAL(SDOC__GD_Status__c,&apos;Linked to S3&apos;)) )
,

HYPERLINK( SDOC__GD_Link__c
,IMAGE(&quot;/sfc/images/docicons/doctype_gdoc_16.png&quot;,&quot;View&quot;)
,&quot;_blank&quot;)
,

HYPERLINK(
IF(
AND (NOT(isblank(SDOC__GD_Link__c)),ISPICKVAL(SDOC__GD_Status__c, &apos;Linked to Attachment&apos;) ) ,
SDOC__GD_Link__c,
&quot;/apex/SDOC__SDTemplate&quot;&amp;TEXT(SDOC__SDTemplate__r.SDOC__Template_Format__c) &amp;&apos;?Id=&apos; &amp; Id
)

,IMAGE(
CASE(SDOC__SDTemplate__r.SDOC__Template_Format__c,
&quot;XLS&quot;, &quot;/sfc/images/docicons/doctype_excel_16.png&quot;,
&quot;DOC&quot;, &quot;/sfc/images/docicons/doctype_word_16.png&quot;,
&quot;PDF&quot;, &quot;/sfc/images/docicons/doctype_pdf_16.png&quot;,
&quot;HTML&quot;, &quot;/sfc/images/docicons/doctype_html_16.png&quot;,
&quot;PPT&quot;, &quot;/sfc/images/docicons/doctype_ppt_16.png&quot;,
&quot;XML&quot;, &quot;/sfc/images/docicons/doctype_XML_16.png&quot;,
&quot;&quot;),
&apos;View&apos; &amp; &apos; &apos; &amp; TEXT(SDOC__SDTemplate__r.SDOC__Template_Format__c ))
, &quot;_blank&quot;)

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>View</label>
        <type>Text</type>
    </fields>
    <label>SDoc</label>
    <listViews>
        <fullName>SDOC__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SD-{000}</displayFormat>
        <label>SDoc Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>S-Docs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>